[[bin]]
name = 'genwallet'
path = 'src/main.rs'

[package]
name = 'crypto_wallet'
version = '0.1.0'
edition = '2021'

[dependencies]
anyhow = '1.0'
dotenv = '0.15.0'
web3 = '0.17.0'
serde_json = '1.0'
reqwest = '0.12.2'
sha256 = '1.5.0'
tiny-keccak = '1.4'
rpassword = '7.3.1'
sled = "0.34.7"
dirs = "5.0.1"
bincode = "1.3.3"

[dependencies.clap]
version = '4.5.3'
features = ['derive']

[dependencies.secp256k1]
version = '0.20.3'
features = ['rand']

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.serde]
version = '1.0'
features = ['derive']

